# smart-match

./: .gitignore  API_DOCUMENTATION.md  EXAMPLES.md  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  api.py  config.py  controller.py  env.example  facets_config.json  pyproject.toml  start.sh  test_swagger.py
services/: facet_parser.py
tests/: __init__.py  test_api.py
